# blender_extern_draco

./: .gitignore  .project  CMakeLists.txt  README.md  Readme.md
addon/blender-draco-exporter/: draco-exporter.py
addons/: draco-exporter.py
src/: auxiliary.h  common.cpp  common.h  decoder.cpp  decoder.h  draco-compressor.cpp  draco-compressor.h  draco-demo.cpp  draco-exporter.cpp  encoder.cpp  encoder.h
